@@ -1,8 +1,14 @@
-CHANGES.txt - 2006-04-19
+CHANGES.txt - 2006-04-20
 ------------------------
 
 CHANGES IN CUPS V1.2rc3
 
+	- Changed the default log level for status messages back
+	  to "DEBUG" to be consistent with CUPS 1.1.x (STR #1579)
+	- The error string was not set properly when
+	  cupsDoFileRequest() was given the name of a directory
+	  (STR #1578)
+	- Fixed handling of job-hold-until (STR #1581)
 	- Added explicit notes to the cupsaddsmb man page
 	  explaining that the driver filenames are case-sensitive
 	  under UNIX and that they must be all lowercase (Windows
